crates/reinhardt-pages/tests/ui/component/fail/missing_loader_input.stderr
error: #[component] route binds a loader but has no Loader<T> input
 --> tests/ui/component/fail/missing_loader_input.rs:8:1
  |
8 | #[component("/projects/{id}/", name = "project", loader = project_loader)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused imports: `Page` and `page`
 --> tests/ui/component/fail/missing_loader_input.rs:1:23
  |
1 | use reinhardt_pages::{Page, Path, component, loader, page};
  |                       ^^^^                           ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
